[gd_scene load_steps=11 format=3 uid="uid://qgw1s5p605t0"]

[ext_resource type="Script" uid="uid://b4jtouata6mbh" path="res://scripts/main/BreederRoom.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://d00b0ly2qowij" path="res://scenes/ui/BreedingPanel.tscn" id="2_breeding"]
[ext_resource type="Texture2D" uid="uid://dnnjm4xw4c0fn" path="res://assets/dragon_small.png" id="2_xekre"]
[ext_resource type="PackedScene" uid="uid://beje45giu111w" path="res://scenes/ui/PunnettSquare.tscn" id="3_punnett"]
[ext_resource type="PackedScene" path="res://scenes/ui/SelectionPopup.tscn" id="4_popup"]
[ext_resource type="AudioStream" uid="uid://yk003mqw8t1a" path="res://assets/sfx/breed.ogg" id="5_q1b8u"]
[ext_resource type="AudioStream" uid="uid://mhhwgsx7n5d4" path="res://assets/sfx/rename.ogg" id="6_3e4mx"]
[ext_resource type="PackedScene" uid="uid://bkb5c4gdodx4k" path="res://scenes/ui/QuizPunnettSquare.tscn" id="7_quiz"]
[ext_resource type="Texture2D" uid="uid://cv28pxouhetg7" path="res://assets/smoke_emoji.png" id="7_uyvud"]
[ext_resource type="Texture2D" uid="uid://iabbkmw5800n" path="res://assets/fire_emoji.png" id="8_6yn5m"]

[node name="BreederRoom" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.14901961, 0.6039216, 0.6745098, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DragonPanel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 26.0
offset_top = 96.0
offset_right = 856.0
offset_bottom = 796.0
mouse_filter = 2

[node name="DragonScroll" type="ScrollContainer" parent="CanvasLayer/DragonPanel"]
layout_mode = 0
offset_right = 830.0
offset_bottom = 700.0
horizontal_scroll_mode = 0

[node name="DragonGrid" type="GridContainer" parent="CanvasLayer/DragonPanel/DragonScroll"]
unique_name_in_owner = true
custom_minimum_size = Vector2(760, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 6

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 10.0
offset_right = 353.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "      Dragon Genetics Lab"

[node name="DragonSmall2" type="Sprite2D" parent="CanvasLayer/TitleLabel"]
position = Vector2(22.000061, 21)
scale = Vector2(0.56681556, 0.56681556)
texture = ExtResource("2_xekre")

[node name="versionLabel" type="Label" parent="CanvasLayer/TitleLabel"]
layout_mode = 0
offset_left = 336.0
offset_top = 17.0
offset_right = 395.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 10
text = "v0.95"

[node name="GenerationLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Dragons: 2 |       Fire: 1 |        No Fire: 1"

[node name="FireEmoji" type="Sprite2D" parent="CanvasLayer/GenerationLabel"]
position = Vector2(110, 12)
scale = Vector2(0.16666667, 0.1666667)
texture = ExtResource("8_6yn5m")

[node name="SmokeEmoji" type="Sprite2D" parent="CanvasLayer/GenerationLabel"]
position = Vector2(200, 12)
scale = Vector2(0.167, 0.167)
texture = ExtResource("7_uyvud")

[node name="BreedingPanel" parent="CanvasLayer" instance=ExtResource("2_breeding")]
offset_left = 915.0
offset_top = 20.0
offset_right = 1237.0
offset_bottom = 200.0

[node name="LevelSelect" type="OptionButton" parent="CanvasLayer"]
offset_left = 540.0
offset_top = 16.0
offset_right = 820.0
offset_bottom = 42.0

[node name="PunnettSquare" parent="CanvasLayer" instance=ExtResource("3_punnett")]
unique_name_in_owner = true
offset_left = 918.0
offset_top = 220.0
offset_right = 1252.0
offset_bottom = 540.0

[node name="QuizSquare" parent="CanvasLayer" instance=ExtResource("7_quiz")]
unique_name_in_owner = true
offset_left = 565.0
offset_top = 217.0
offset_right = 925.0
offset_bottom = 717.0

[node name="SelectionPopup" parent="CanvasLayer" instance=ExtResource("4_popup")]
layout_mode = 3
offset_left = 400.0
offset_top = 300.0
offset_right = 620.0
offset_bottom = 500.0

[node name="ResetButton" type="Button" parent="CanvasLayer"]
offset_left = 1031.0
offset_top = 669.0
offset_right = 1171.0
offset_bottom = 700.0
text = "ðŸ”„ Reset Lab"

[node name="InstructionsLabel" type="Label" parent="CanvasLayer"]
offset_left = 11.0
offset_top = 656.0
offset_right = 791.0
offset_bottom = 686.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Click a dragon to select it as a parent. 
Use the Punnett Square to predict offspring!"

[node name="BreedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q1b8u")

[node name="RenamePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3e4mx")
